--- a/Gerenciador de Emprestimos.csproj
+++ b/Gerenciador de Emprestimos.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="MySql.Data" Version="9.5.0" />
   </ItemGroup>
 
