--- a/Gerenciador de Emprestimos.csproj
+++ b/Gerenciador de Emprestimos.csproj
@@ -15,7 +15,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
+    <PackageReference Include="itext7" Version="9.4.0" />
+    <PackageReference Include="itext7.bouncy-castle-adapter" Version="9.4.0" />
     <PackageReference Include="MySql.Data" Version="9.5.0" />
   </ItemGroup>
 
