Finalização da estrutura, de recalculo mensal de parcelas em atraso.

--- a/Gerenciador de Emprestimos.csproj
+++ b/Gerenciador de Emprestimos.csproj
@@ -7,7 +7,12 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>Images\emprestimo-seguro.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Images\emprestimo-seguro.ico" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
