feat: Adicionado Logs em todos os formulários

--- a/Gerenciador de Emprestimos.csproj
+++ b/Gerenciador de Emprestimos.csproj
@@ -19,6 +19,8 @@
     <PackageReference Include="itext7" Version="9.4.0" />
     <PackageReference Include="itext7.bouncy-castle-adapter" Version="9.4.0" />
     <PackageReference Include="MySql.Data" Version="9.5.0" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
