fix: Corrigido Versão invisivél em outras telas.

--- a/Gerenciador de Emprestimos.csproj
+++ b/Gerenciador de Emprestimos.csproj
@@ -8,6 +8,8 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>Images\emprestimo-seguro.ico</ApplicationIcon>
+    <FileVersion></FileVersion>
+    <AssemblyVersion></AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
